修改服务器

--- a/server/config.template/config.yaml
+++ b/server/config.template/config.yaml
@@ -8,7 +8,7 @@ global:
   db_host: 127.0.0.1
   db_port: 3306
   db_user: root
-  db_passwd: 'cys123456'
+  db_passwd: '123456'
   enable_ssl: true
   # 分隔GameServer和CrossServer
   min_cross_server_id: 70
@@ -18,15 +18,15 @@ db_list:
     host: 127.0.0.1
     port: 3306
     user: root
-    passwd: 'cys123456'
+    passwd: '123456'
 
 server_list:
 - name: game50
   type: game
   server_id: 50
-  ip: 117.50.192.198
+  ip: 117.50.193.85
   area_id: 2
-  area_name: "1-纽约"
+  area_name: "程序区"
   open_time: "2023-03-09 20:00:00"
   allow_login: 1
   enable_ssl: false
@@ -38,11 +38,11 @@ server_list:
 - name: game55
   type: game
   server_id: 55
-  ip: 117.50.192.198
-  ssh_ip: 117.50.192.198
+  ip: 117.50.193.85
+  ssh_ip: 117.50.193.85
   area_id: 2
-  area_name: "1-圣迭戈"
-  open_time: "2023-06-03 20:00:00"
+  area_name: "测试区"
+  open_time: "2023-03-09 20:00:00"
   allow_login: 1
   enable_ssl: true
   state: free
@@ -53,9 +53,9 @@ server_list:
 - name: game51
   type: game
   server_id: 51
-  ip: 117.50.192.198
+  ip: 117.50.193.85
   area_id: 2
-  area_name: "1-华盛顿"
+  area_name: "程序区"
   open_time: "2019-03-01 00:00:00"
   allow_login: 1
   enable_ssl: false
@@ -64,13 +64,111 @@ server_list:
   recommend_priority: 1
   cross_server_id: 70
 
+- name: 郝继胜服
+  type: game
+  server_id: 53
+  ip: 117.50.193.85
+  db: db1
+  area_id: 2
+  area_name: "程序区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: game60
+  type: game
+  server_id: 60
+  ip: 117.50.193.85
+  area_id: 2
+  area_name: "程序区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
 
 - name: 策划1服
   type: game
   server_id: 61
-  ip: 117.50.192.198
+  ip: 117.50.193.85
   area_id: 3
   area_name: "策划区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: 策划2服
+  type: game
+  server_id: 62
+  ip: 117.50.193.85
+  area_id: 3
+  area_name: "策划区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: 策划3服
+  type: game
+  server_id: 63
+  ip: 117.50.193.85
+  area_id: 3
+  area_name: "策划区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: game65
+  type: game
+  server_id: 65
+  ip: 117.50.193.85
+  area_id: 2
+  area_name: "程序区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: game67
+  type: game
+  server_id: 67
+  ip: 117.50.193.85
+  area_id: 2
+  area_name: "程序区"
+  open_time: "2019-03-01 00:00:00"
+  allow_login: 1
+  enable_ssl: false
+  state: free
+  recommend_status: 0
+  recommend_priority: 1
+  cross_server_id: 70
+
+- name: game68
+  type: game
+  server_id: 68
+  ip: 117.50.193.85
+  area_id: 2
+  area_name: "程序区"
   open_time: "2019-03-01 00:00:00"
   allow_login: 1
   enable_ssl: false
@@ -82,24 +180,24 @@ server_list:
 - name: 跨服
   type: cross
   server_id: 70
-  ip: 117.50.192.198
+  ip: 117.50.193.85
 
 - name: cluster_router服
   type: cluster_router
   server_id: 2800
-  ip: 117.50.192.198
+  ip: 117.50.193.85
 
 - name: 世界服
   type: world
   server_id: 2801
-  ip: 117.50.192.198
+  ip: 117.50.193.85
 
 - name: gm服
   type: gm_router
   server_id: 2803
-  ip: 117.50.192.198
+  ip: 117.50.193.85
 
 - name: 登录服
   type: login
   server_id: 2810
-  ip: 117.50.192.198
+  ip: 117.50.193.85
